--- a/apple website/apple.css
+++ b/apple website/apple.css
@@ -88,8 +88,9 @@ nav h3{
 
 /*PAGE2*/
 #page2{
-  height: 100vh;
+  height: 121vh;
   width: 100%;
+  position: relative;
   background-color: rgb(22, 21, 21);
 }
 #page2-contents{
@@ -150,32 +151,34 @@ color: rgb(150, 143, 143);
 
 
 #page4{
-  height: 180vh;
+ min-height: 100vh;
   width: 100%;
-  position: relative;
   background-color: rgb(0, 0, 0);
 }
 #page4 video{
-  height: 50%;
+  height: 100%;
   width: 70%;
+  align-items: center;
   margin-left: 15%;
-  margin-top: 35%;
+  margin-top: 25%;
 }
 #page4-contents{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-top: -70%;
-  width: 80%;
-  margin-left: 5%;
+  margin-top: -53%;
+  width: 50%;
+  height: 100%;
+  margin-left: 10%;
 }
 #page4-contents h1{
-  font-size: 4vw;
-  color: rgb(156, 147, 147);
-  margin-bottom: 6%;
+  font-size: 4.6vw;
+  margin-bottom: 3%;
+  color:rgb(156, 147, 147);
 }
 #page4-contents h2{
   margin-left: 15%;
-  font-size: 4.5vw;
-  color: white;
+  font-size: 4.8vw;
+  color: #fff;
+ 
 }
